feat: 削除ボタン追加

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,16 @@ header{
 }
 header h1{ font-size:16px; margin:0 }
 .chip{ font-size:12px; padding:2px 8px; border:1px solid #ddd; border-radius:999px }
-#notifBtn{
-  margin-left:auto; font-size:12px; padding:4px 8px; border:1px solid #ddd; border-radius:6px; background:#fff; cursor:pointer;
+.header-actions{ margin-left:auto; display:flex; gap:8px }
+.header-actions button{
+  font-size:12px; padding:4px 8px; border:1px solid #ddd; border-radius:6px; background:#fff; cursor:pointer;
 }
+
 #log{ flex:1; overflow:auto; padding:12px; }
 .date-separator{
   text-align:center; margin:16px 0; font-size:13px; color:#666;
 }
+
 #bar{
   position:sticky; bottom:0;
   display:flex; gap:8px; padding:8px 8px calc(8px + var(--safe-bottom));
@@ -34,6 +37,7 @@ input,button{ font-size:16px }
 #name{ width:30%; min-width:120px }
 #text{ flex:1; min-width:0 }
 #send{ padding:8px 12px }
+
 .bubble{
   margin:6px 0; padding:8px 10px; border-radius:10px; background:#f1f3f5; max-width:90%;
   display:flex; align-items:baseline; gap:8px; flex-wrap:wrap;
@@ -42,14 +46,20 @@ input,button{ font-size:16px }
 .msg-text{ white-space:pre-wrap; word-break:break-word }
 .time{ font-size:11px; color:#666; margin-left:auto; opacity:.9; }
 .sys{ color:#666; font-size:12px; margin:8px 0 }
+
 @media (max-width:480px){ #name{ width:40% } #send{ padding:8px } }
 </style>
 
 <header>
   <h1>Hobby Chat</h1><span class="chip">MVP</span>
-  <button id="notifBtn">🔔 通知OFF</button>
+  <div class="header-actions">
+    <button id="notifBtn">🔕 通知OFF</button>
+    <button id="clearBtn" title="チャット履歴をすべて削除">🧹 履歴削除</button>
+  </div>
 </header>
+
 <div id="log"></div>
+
 <div id="bar">
   <input id="name" placeholder="ニックネーム">
   <input id="text" placeholder="メッセージを入力">
@@ -58,49 +68,52 @@ input,button{ font-size:16px }
 
 <script src="/socket.io/socket.io.js" crossorigin="anonymous"></script>
 <script>
+// --- 初期参照
 const socket = io();
-const log = document.getElementById('log');
-const nameI = document.getElementById('name');
-const textI = document.getElementById('text');
-const sendB = document.getElementById('send');
+const log    = document.getElementById('log');
+const nameI  = document.getElementById('name');
+const textI  = document.getElementById('text');
+const sendB  = document.getElementById('send');
 const notifB = document.getElementById('notifBtn');
+const clearB = document.getElementById('clearBtn');
 
 // ニックネーム保存
 nameI.value = localStorage.getItem('nickname') || '';
 nameI.addEventListener('input', () => localStorage.setItem('nickname', nameI.value.trim()));
 
-// === 相対時間関数 ===
+// 相対時刻表示
 function relativeTime(dateStr){
   const now = new Date();
   const d = new Date(dateStr);
-  const diff = (now - d) / 1000; // 秒
-  if(diff < 60) return "たった今";
-  if(diff < 3600) return Math.floor(diff/60) + "分前";
-  if(diff < 86400) return Math.floor(diff/3600) + "時間前";
-  if(diff < 172800) return "昨日";
-  if(diff < 604800) return Math.floor(diff/86400) + "日前";
+  const diff = (now - d) / 1000;
+  if (diff < 60) return "たった今";
+  if (diff < 3600) return Math.floor(diff/60) + "分前";
+  if (diff < 86400) return Math.floor(diff/3600) + "時間前";
+  if (diff < 172800) return "昨日";
+  if (diff < 604800) return Math.floor(diff/86400) + "日前";
   return d.toLocaleDateString();
 }
 
-// === 日付セパレータ管理 ===
-let lastDate = null;
-function insertDateSeparatorIfNeeded(dateStr){
+// 日付セパレータ（最新が上＝prepend運用）
+let topDateKey = null;
+function ensureSeparatorFor(dateStr){
   const d = new Date(dateStr);
-  const dateKey = d.toISOString().split("T")[0];
-  if(lastDate !== dateKey){
-    const label = new Date(dateKey);
-    const today = new Date();
-    const diffDays = Math.floor((today - label)/(1000*60*60*24));
-    const labelText = diffDays===0 ? "今日" : diffDays===1 ? "昨日" : label.toLocaleDateString();
-    const sep = document.createElement('div');
-    sep.className = 'date-separator';
-    sep.textContent = labelText;
-    log.prepend(sep);
-    lastDate = dateKey;
-  }
+  const dateKey = d.toISOString().split('T')[0];
+  if (topDateKey === dateKey) return;
+
+  const labelDate = new Date(dateKey);
+  const today = new Date();
+  const diffDays = Math.floor((today - labelDate)/(1000*60*60*24));
+  const label = diffDays===0 ? "今日" : diffDays===1 ? "昨日" : labelDate.toLocaleDateString();
+
+  const sep = document.createElement('div');
+  sep.className = 'date-separator';
+  sep.textContent = label;
+  log.prepend(sep); // さらに上に配置
+  topDateKey = dateKey;
 }
 
-// === 通知 ===
+// 通知
 function updateNotifButton(){
   notifB.textContent = (Notification?.permission === 'granted') ? '🔔 通知ON' : '🔕 通知OFF';
 }
@@ -111,16 +124,24 @@ notifB.onclick = async ()=>{
 };
 updateNotifButton();
 
-// === 描画 ===
+function maybeNotify({name, text}){
+  if(name === nameI.value.trim()) return;
+  if(document.hidden && Notification?.permission === 'granted'){
+    new Notification(`${name}`, { body: text, tag: 'hobby-chat' });
+    if(navigator.vibrate) navigator.vibrate(30);
+  }
+}
+
+// 描画＆重複対策（id優先キー）
 const seen = new Set();
-function keyOf(m){ return m.id ? `id:${m.id}` : `${m.name}:${m.text}:${m.created_at}`; }
+const keyOf = (m) => m.id ? `id:${m.id}` : `${m.name}:${m.text}:${m.created_at || ''}`;
 
 function addMsg(m, me=false){
-  const key = keyOf(m);
-  if(seen.has(key)) return;
-  seen.add(key);
-  insertDateSeparatorIfNeeded(m.created_at);
+  const k = keyOf(m);
+  if (seen.has(k)) return;
+  seen.add(k);
 
+  // 先にメッセージ
   const wrap = document.createElement('div');
   wrap.className = 'bubble' + (me ? ' me' : '');
   const body = document.createElement('div');
@@ -131,9 +152,12 @@ function addMsg(m, me=false){
   time.textContent = relativeTime(m.created_at);
   wrap.append(body, time);
   log.prepend(wrap);
+
+  // さらに上にセパレータ
+  ensureSeparatorFor(m.created_at);
 }
 
-// === システムメッセージ ===
+// システムメッセージ
 function addSys(t){
   const p = document.createElement('div');
   p.className = 'sys';
@@ -141,34 +165,40 @@ function addSys(t){
   log.prepend(p);
 }
 
-// === 通知トリガ ===
-function maybeNotify({name, text}){
-  if(name === nameI.value.trim()) return;
-  if(document.hidden && Notification?.permission === 'granted'){
-    new Notification(`${name}`, { body: text });
-    if(navigator.vibrate) navigator.vibrate(30);
-  }
-}
-
-// === ソケット処理 ===
-socket.on('connect', () => { log.replaceChildren(); seen.clear(); lastDate = null; });
+// ソケット
+socket.on('connect', () => { log.replaceChildren(); seen.clear(); topDateKey = null; });
 socket.on('sys', addSys);
-socket.on('msg', (m)=>{ addMsg(m, m.name===nameI.value.trim()); maybeNotify(m); });
+socket.on('msg', (m) => {
+  const me = (m.name === nameI.value.trim());
+  addMsg(m, me);
+  maybeNotify(m);
+});
 
-// === 送信処理 ===
+// 送信（サーバ戻りのみ描画＝重複防止）
 function joinIfNeeded(){ const n = nameI.value.trim(); if(n) socket.emit('join', n); }
-sendB.onclick = ()=>{
+sendB.onclick = () => {
   joinIfNeeded();
   const t = textI.value.trim();
   if(!t) return;
-  const msg = { name: nameI.value.trim()||'guest', text: t, created_at: new Date().toISOString() };
   socket.emit('msg', t);
-  addMsg(msg, true);
-  textI.value='';
+  textI.value = '';
 };
-textI.addEventListener('keydown', e=>{ if(e.key==='Enter') sendB.click(); });
+textI.addEventListener('keydown', e => { if(e.key==='Enter') sendB.click(); });
 
-// === 入力欄の隠れ対策 ===
-textI.addEventListener('focus', ()=> setTimeout(()=> textI.scrollIntoView({block:'nearest'}),50));
+// 入力欄の隠れ対策
+textI.addEventListener('focus', () => setTimeout(() => textI.scrollIntoView({block:'nearest'}), 50));
+
+// 履歴削除ボタン
+clearB.onclick = () => {
+  if (confirm('本当に全履歴を削除しますか？（取り消せません）')) {
+    socket.emit('clear');
+  }
+};
+socket.on('cleared', () => {
+  log.replaceChildren();
+  seen.clear();
+  topDateKey = null;
+  alert('チャット履歴を削除しました');
+});
 </script>
 </html>
