feat: メンション追加

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ header{
   display:flex; align-items:center; gap:8px; padding:10px 12px;
   border-bottom:1px solid #e5e5e5; background:#fff; position:sticky; top:0; z-index:10;
 }
-header h1{ font-size:16px; margin:0 }
+header h1{ font-size:16px; margin:0; cursor:pointer; user-select:none; }
 .chip{ font-size:12px; padding:2px 8px; border:1px solid #ddd; border-radius:999px }
 .header-actions{ margin-left:auto; display:flex; gap:8px }
 .header-actions button{
@@ -32,6 +32,7 @@ header h1{ font-size:16px; margin:0 }
   display:flex; gap:8px; padding:8px 8px calc(8px + var(--safe-bottom));
   border-top:1px solid #e5e5e5; background:#fff; z-index:10;
   box-shadow:0 -2px 8px rgba(0,0,0,.04);
+  align-items: center;
 }
 input,button,select{ font-size:16px }
 #nameSel{ width:30%; min-width:160px }
@@ -47,11 +48,42 @@ input,button,select{ font-size:16px }
 .time{ font-size:11px; color:#666; margin-left:auto; opacity:.9; }
 .sys{ color:#666; font-size:12px; margin:8px 0 }
 
+mark {
+  background: #ffe56a;
+  padding: 0 2px;
+  border-radius: 2px;
+}
+
+/* メンション候補ポップアップ */
+.mention-box{
+  position:absolute;
+  bottom: calc(52px + var(--safe-bottom)); /* 入力欄の少し上に重ねる */
+  left: 8px;
+  right: 8px;
+  display:none;
+  background:#fff;
+  border:1px solid #e5e5e5;
+  border-radius:8px;
+  box-shadow:0 8px 24px rgba(0,0,0,.08);
+  padding:6px;
+  z-index: 20;
+}
+.mention-list{
+  display:flex; flex-wrap:wrap; gap:6px;
+}
+.mention-item{
+  padding:6px 10px; border:1px solid #ddd; border-radius:999px; cursor:pointer; background:#fafafa;
+}
+.mention-item.active{
+  outline: 2px solid #7aa7ff;
+  background:#eef3ff;
+}
+
 @media (max-width:480px){ #nameSel{ width:45% } #send{ padding:8px } }
 </style>
 
 <header>
-  <h1>Hobby Chat</h1><span class="chip">MVP</span>
+  <h1 id="title">Hobby Chat</h1><span class="chip">MVP</span>
   <div class="header-actions">
     <button id="notifBtn">🔕 通知OFF</button>
     <button id="clearBtn" title="チャット履歴をすべて削除">🧹 履歴削除</button>
@@ -73,23 +105,43 @@ input,button,select{ font-size:16px }
   <button id="send">送信</button>
 </div>
 
+<!-- メンション候補ポップアップ -->
+<div id="mentionBox" class="mention-box">
+  <div class="mention-list" id="mentionList"></div>
+</div>
+
 <script src="/socket.io/socket.io.js" crossorigin="anonymous"></script>
 <script>
-const socket = io();
-const log    = document.getElementById('log');
-const nameSel= document.getElementById('nameSel');
-const textI  = document.getElementById('text');
-const sendB  = document.getElementById('send');
-const notifB = document.getElementById('notifBtn');
-const clearB = document.getElementById('clearBtn');
+/* ========= 定数・参照 ========= */
+const MEMBERS = ['なおき', 'りさ', 'さな', 'りと']; // 固定メンバー
 
-// --- ユーティリティ（最新は“下”運用） ---
+const socket  = io();
+const log     = document.getElementById('log');
+const nameSel = document.getElementById('nameSel');
+const textI   = document.getElementById('text');
+const sendB   = document.getElementById('send');
+const notifB  = document.getElementById('notifBtn');
+const clearB  = document.getElementById('clearBtn');
+const titleEl = document.getElementById('title');
+
+const mentionBox  = document.getElementById('mentionBox');
+const mentionList = document.getElementById('mentionList');
+
+/* ========= 便利関数 ========= */
 function isNearBottom(elem, threshold = 40) {
   return elem.scrollTop + elem.clientHeight >= elem.scrollHeight - threshold;
 }
 function scrollToBottom(elem) { elem.scrollTop = elem.scrollHeight; }
+function isMe(name) { return name === (nameSel.value || ''); }
+function escapeHTML(s){
+  return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;')
+          .replace(/"/g,'&quot;').replace(/'/g,'&#39;');
+}
 
-// --- ニックネーム保存＆自動join ---
+/* ========= タイトルクリックでリロード ========= */
+titleEl.addEventListener('click', () => location.reload());
+
+/* ========= ニックネーム保存＆自動join ========= */
 nameSel.value = localStorage.getItem('nickname') || '';
 if (nameSel.value) socket.emit('join', nameSel.value);
 nameSel.addEventListener('change', () => {
@@ -97,9 +149,7 @@ nameSel.addEventListener('change', () => {
   if (nameSel.value) socket.emit('join', nameSel.value);
 });
 
-function isMe(name) { return name === (nameSel.value || ''); }
-
-// --- 相対時刻 ---
+/* ========= 相対時刻 ========= */
 function relativeTime(dateStr){
   const now = new Date();
   const d = new Date(dateStr);
@@ -112,7 +162,7 @@ function relativeTime(dateStr){
   return d.toLocaleDateString();
 }
 
-// --- 日付セパレータ（append運用：新しい日になったら区切りを“下”に挿入） ---
+/* ========= 日付セパレータ（append運用） ========= */
 let lastDateKey = null;
 function ensureSeparatorForAppend(dateStr){
   const d = new Date(dateStr);
@@ -131,7 +181,7 @@ function ensureSeparatorForAppend(dateStr){
   lastDateKey = dateKey;
 }
 
-// --- 通知ON/OFF（アプリ内トグル + ブラウザ権限） ---
+/* ========= 通知ON/OFF（アプリ内トグル + ブラウザ権限） ========= */
 let notifEnabled = JSON.parse(localStorage.getItem('notifEnabled') ?? 'true'); // 既定ON
 function updateNotifButton(){
   const perm = Notification?.permission;
@@ -156,38 +206,56 @@ updateNotifButton();
 function maybeNotify({name, text}){
   if (isMe(name)) return;
   if (!notifEnabled || Notification?.permission !== 'granted') return;
+
+  const my = nameSel.value;
+  const mentioned = text.includes(`@${my}`);
   const notInFront = document.hidden || !document.hasFocus();
-  if (!notInFront) return;
-  new Notification(`${name}`, { body: text, tag: 'hobby-chat' });
-  if (navigator.vibrate) navigator.vibrate(30);
+
+  // 自分宛メンションならフォーカス中でも通知、それ以外は非表示時のみ
+  if (!mentioned && !notInFront) return;
+
+  const title = mentioned ? `📣 あなた宛て (${name})` : `${name}`;
+  new Notification(title, { body: text, tag: 'hobby-chat' });
+  if (navigator.vibrate) navigator.vibrate(mentioned ? 100 : 30);
 }
 
-// --- 重複防止（id優先キー） ---
+/* ========= 重複防止 ========= */
 const seen = new Set();
 const keyOf = (m) => m.id ? `id:${m.id}` : `${m.name}:${m.text}:${m.created_at || ''}`;
 
-// --- 描画（最新は下：append） ---
+/* ========= メンション強調（安全に） ========= */
+function renderTextWithMentions(raw){
+  // まず全文エスケープ
+  let esc = escapeHTML(raw);
+  // @なおき 等を <mark>@なおき</mark> に（日本語名4人固定）
+  esc = esc.replace(/@(?:なおき|りさ|さな|りと)/g, (mt) => `<mark>${mt}</mark>`);
+  return esc;
+}
+
+/* ========= 描画（最新は下：append） ========= */
 function addMsg(m, me=false){
   const k = keyOf(m);
   if (seen.has(k)) return;
   seen.add(k);
 
-  // 日付が変わったらセパレータを“先に”挿入（その下にメッセージが並ぶ）
   ensureSeparatorForAppend(m.created_at);
 
   const wrap = document.createElement('div');
   wrap.className = 'bubble' + (me ? ' me' : '');
+
   const body = document.createElement('div');
   body.className = 'msg-text';
-  body.textContent = `${m.name}: ${m.text}`;
+  body.innerHTML = `${escapeHTML(m.name)}: ${renderTextWithMentions(m.text)}`;
+
   const time = document.createElement('span');
   time.className = 'time';
   time.textContent = relativeTime(m.created_at);
+
   wrap.append(body, time);
   log.append(wrap);
 }
 
-// --- システムメッセージ ---
+/* ========= システムメッセージ ========= */
 function addSys(t){
   const p = document.createElement('div');
   p.className = 'sys';
@@ -195,7 +263,7 @@ function addSys(t){
   log.append(p);
 }
 
-// --- 受信：下付近にいる時だけオートスクロール ---
+/* ========= 受信：下付近にいる時だけオートスクロール ========= */
 socket.on('connect', () => { log.replaceChildren(); seen.clear(); lastDateKey = null; });
 socket.on('sys', addSys);
 socket.on('msg', (m) => {
@@ -206,7 +274,7 @@ socket.on('msg', (m) => {
   maybeNotify(m);
 });
 
-// --- 送信（サーバ戻りのみ描画＝重複防止） ---
+/* ========= 送信（サーバ戻りのみ描画） ========= */
 function joinIfNeeded(){ if (nameSel.value) socket.emit('join', nameSel.value); }
 sendB.onclick = () => {
   if (!nameSel.value) return alert('メンバーを選択してください');
@@ -218,10 +286,27 @@ sendB.onclick = () => {
   textI.value = '';
   if (auto) scrollToBottom(log);
 };
-textI.addEventListener('keydown', e => { if(e.key==='Enter') sendB.click(); });
+textI.addEventListener('keydown', e => { 
+  if(e.key==='Enter'){
+    if (mentionBox.style.display === 'block') {
+      // 候補表示中の Enter は補完に使う（送信しない）
+      e.preventDefault();
+      applyActiveMention();
+      return;
+    }
+    sendB.click();
+  } else if (e.key === 'Tab' && mentionBox.style.display === 'block') {
+    e.preventDefault();
+    applyActiveMention();
+  } else if (e.key === 'ArrowDown' && mentionBox.style.display === 'block') {
+    e.preventDefault(); moveActiveMention(1);
+  } else if (e.key === 'ArrowUp' && mentionBox.style.display === 'block') {
+    e.preventDefault(); moveActiveMention(-1);
+  }
+});
 textI.addEventListener('focus', () => setTimeout(() => textI.scrollIntoView({block:'nearest'}), 50));
 
-// --- 履歴削除（管理トークンの入力もサポート） ---
+/* ========= 履歴削除（管理トークン） ========= */
 clearB.onclick = () => {
   if (!nameSel.value) return alert('メンバーを選択してください');
   if (!confirm('本当に全履歴を削除しますか？（取り消せません）')) return;
@@ -233,6 +318,86 @@ socket.on('cleared', () => {
   seen.clear();
   lastDateKey = null;
   alert('チャット履歴を削除しました');
+});
+
+/* ========= メンション補完（@入力で候補を表示） ========= */
+let activeIdx = -1;
+
+function findMentionToken(){
+  // キャレット位置で、直前の @～ の語を見つける
+  const pos = textI.selectionStart;
+  const val = textI.value;
+  // 空白・行頭から始まる @token を右端＝キャレットまで
+  const left = val.slice(0, pos);
+  const m = left.match(/(^|\s)@([^\s@]{0,20})$/);
+  if(!m) return null;
+  const prefix = m[2]; // @に続く文字（0～）
+  const start = pos - prefix.length; // prefixの開始位置（@の直後）
+  const atPos = start - 1; // @の位置
+  return { atPos, start, end: pos, prefix };
+}
+
+function showMentionBox(items){
+  mentionList.innerHTML = '';
+  items.forEach((name, i) => {
+    const b = document.createElement('button');
+    b.type = 'button';
+    b.className = 'mention-item' + (i===0 ? ' active':'');
+    b.textContent = '@' + name;
+    b.onclick = () => applyMention(name);
+    mentionList.appendChild(b);
+  });
+  activeIdx = items.length ? 0 : -1;
+  mentionBox.style.display = items.length ? 'block' : 'none';
+}
+function hideMentionBox(){
+  mentionBox.style.display = 'none';
+  activeIdx = -1;
+}
+
+function applyMention(name){
+  const tok = findMentionToken();
+  if(!tok) return hideMentionBox();
+  const val = textI.value;
+  // @prefix を @name + 後ろに半角スペースを入れて続きが打ちやすいように
+  const before = val.slice(0, tok.atPos);
+  const after  = val.slice(tok.end);
+  textI.value = before + '@' + name + ' ' + after;
+  const newPos = (before + '@' + name + ' ').length;
+  textI.setSelectionRange(newPos, newPos);
+  hideMentionBox();
+  textI.focus();
+}
+
+function moveActiveMention(step){
+  const buttons = [...mentionList.querySelectorAll('.mention-item')];
+  if (!buttons.length) return;
+  activeIdx = (activeIdx + step + buttons.length) % buttons.length;
+  buttons.forEach((b, i) => b.classList.toggle('active', i===activeIdx));
+}
+function applyActiveMention(){
+  const btn = mentionList.querySelector('.mention-item.active');
+  if (btn) {
+    const name = btn.textContent.replace(/^@/, '');
+    applyMention(name);
+  }
+}
+
+// 入力のたびに候補を更新
+textI.addEventListener('input', () => {
+  const tok = findMentionToken();
+  if(!tok){
+    hideMentionBox();
+    return;
+  }
+  const cand = MEMBERS.filter(n => n.startsWith(tok.prefix || ''));
+  showMentionBox(cand);
+});
+
+// 入力欄からフォーカスが外れれば隠す（バー内クリックはOK）
+document.addEventListener('click', (e) => {
+  if (e.target === textI || e.target === mentionBox || mentionBox.contains(e.target)) return;
+  hideMentionBox();
 });
 </script>
 </html>
