--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,7 @@ mark {
   padding:6px;
   z-index: 20;
 }
-.mention-list{
-  display:flex; flex-wrap:wrap; gap:6px;
-}
+.mention-list{ display:flex; flex-wrap:wrap; gap:6px; }
 .mention-item{
   padding:6px 10px; border:1px solid #ddd; border-radius:999px; cursor:pointer; background:#fafafa;
 }
@@ -112,8 +110,8 @@ mark {
 
 <script src="/socket.io/socket.io.js" crossorigin="anonymous"></script>
 <script>
-/* ========= 定数・参照 ========= */
-const MEMBERS = ['なおき', 'りさ', 'さな', 'りと']; // 固定メンバー
+/* ===== 定数・参照 ===== */
+const MEMBERS = ['なおき', 'りさ', 'さな', 'りと'];
 
 const socket  = io();
 const log     = document.getElementById('log');
@@ -127,7 +125,7 @@ const titleEl = document.getElementById('title');
 const mentionBox  = document.getElementById('mentionBox');
 const mentionList = document.getElementById('mentionList');
 
-/* ========= 便利関数 ========= */
+/* ===== ユーティリティ ===== */
 function isNearBottom(elem, threshold = 40) {
   return elem.scrollTop + elem.clientHeight >= elem.scrollHeight - threshold;
 }
@@ -138,10 +136,10 @@ function escapeHTML(s){
           .replace(/"/g,'&quot;').replace(/'/g,'&#39;');
 }
 
-/* ========= タイトルクリックでリロード ========= */
+/* ===== タイトルクリックでリロード ===== */
 titleEl.addEventListener('click', () => location.reload());
 
-/* ========= ニックネーム保存＆自動join ========= */
+/* ===== ニックネーム保存＆自動join ===== */
 nameSel.value = localStorage.getItem('nickname') || '';
 if (nameSel.value) socket.emit('join', nameSel.value);
 nameSel.addEventListener('change', () => {
@@ -149,7 +147,7 @@ nameSel.addEventListener('change', () => {
   if (nameSel.value) socket.emit('join', nameSel.value);
 });
 
-/* ========= 相対時刻 ========= */
+/* ===== 相対時刻 ===== */
 function relativeTime(dateStr){
   const now = new Date();
   const d = new Date(dateStr);
@@ -162,7 +160,7 @@ function relativeTime(dateStr){
   return d.toLocaleDateString();
 }
 
-/* ========= 日付セパレータ（append運用） ========= */
+/* ===== 日付セパレータ（append運用） ===== */
 let lastDateKey = null;
 function ensureSeparatorForAppend(dateStr){
   const d = new Date(dateStr);
@@ -181,15 +179,15 @@ function ensureSeparatorForAppend(dateStr){
   lastDateKey = dateKey;
 }
 
-/* ========= 通知ON/OFF（アプリ内トグル + ブラウザ権限） ========= */
+/* ===== 通知ON/OFF（アプリ内トグル + 権限） ===== */
 let notifEnabled = JSON.parse(localStorage.getItem('notifEnabled') ?? 'true'); // 既定ON
 function updateNotifButton(){
-  const perm = Notification?.permission;
+  const perm = (typeof Notification !== 'undefined') ? Notification.permission : 'denied';
   const label = (perm === 'granted' && notifEnabled) ? '🔔 通知ON' : '🔕 通知OFF';
   notifB.textContent = label;
 }
 notifB.onclick = async () => {
-  if (!('Notification' in window)) return alert('このブラウザは通知に対応していません');
+  if (typeof Notification === 'undefined') return alert('このブラウザは通知に対応していません');
   const perm = Notification.permission;
   if (perm !== 'granted') {
     const p = await Notification.requestPermission();
@@ -205,13 +203,14 @@ updateNotifButton();
 
 function maybeNotify({name, text}){
   if (isMe(name)) return;
-  if (!notifEnabled || Notification?.permission !== 'granted') return;
+  if (typeof Notification === 'undefined') return;
+  if (!notifEnabled || Notification.permission !== 'granted') return;
 
   const my = nameSel.value;
   const mentioned = text.includes(`@${my}`);
   const notInFront = document.hidden || !document.hasFocus();
 
-  // 自分宛メンションならフォーカス中でも通知、それ以外は非表示時のみ
+  // 自分宛メンションはフォーカス中でも通知／通常は非表示時のみ
   if (!mentioned && !notInFront) return;
 
   const title = mentioned ? `📣 あなた宛て (${name})` : `${name}`;
@@ -219,20 +218,19 @@ function maybeNotify({name, text}){
   if (navigator.vibrate) navigator.vibrate(mentioned ? 100 : 30);
 }
 
-/* ========= 重複防止 ========= */
+/* ===== 重複防止 ===== */
 const seen = new Set();
 const keyOf = (m) => m.id ? `id:${m.id}` : `${m.name}:${m.text}:${m.created_at || ''}`;
 
-/* ========= メンション強調（安全に） ========= */
+/* ===== メンション強調（安全にHTML化） ===== */
 function renderTextWithMentions(raw){
-  // まず全文エスケープ
-  let esc = escapeHTML(raw);
-  // @なおき 等を <mark>@なおき</mark> に（日本語名4人固定）
+  let esc = escapeHTML(raw); // 全文エスケープ
+  // 固定4名を <mark> で強調
   esc = esc.replace(/@(?:なおき|りさ|さな|りと)/g, (mt) => `<mark>${mt}</mark>`);
   return esc;
 }
 
-/* ========= 描画（最新は下：append） ========= */
+/* ===== 描画（最新は下：append） ===== */
 function addMsg(m, me=false){
   const k = keyOf(m);
   if (seen.has(k)) return;
@@ -255,7 +253,7 @@ function addMsg(m, me=false){
   log.append(wrap);
 }
 
-/* ========= システムメッセージ ========= */
+/* ===== システムメッセージ ===== */
 function addSys(t){
   const p = document.createElement('div');
   p.className = 'sys';
@@ -263,7 +261,7 @@ function addSys(t){
   log.append(p);
 }
 
-/* ========= 受信：下付近にいる時だけオートスクロール ========= */
+/* ===== 受信（下付近にいる時だけ自動スクロール） ===== */
 socket.on('connect', () => { log.replaceChildren(); seen.clear(); lastDateKey = null; });
 socket.on('sys', addSys);
 socket.on('msg', (m) => {
@@ -274,7 +272,7 @@ socket.on('msg', (m) => {
   maybeNotify(m);
 });
 
-/* ========= 送信（サーバ戻りのみ描画） ========= */
+/* ===== 送信（サーバ戻りのみ描画） ===== */
 function joinIfNeeded(){ if (nameSel.value) socket.emit('join', nameSel.value); }
 sendB.onclick = () => {
   if (!nameSel.value) return alert('メンバーを選択してください');
@@ -289,15 +287,13 @@ sendB.onclick = () => {
 textI.addEventListener('keydown', e => { 
   if(e.key==='Enter'){
     if (mentionBox.style.display === 'block') {
-      // 候補表示中の Enter は補完に使う（送信しない）
       e.preventDefault();
       applyActiveMention();
       return;
     }
     sendB.click();
   } else if (e.key === 'Tab' && mentionBox.style.display === 'block') {
-    e.preventDefault();
-    applyActiveMention();
+    e.preventDefault(); applyActiveMention();
   } else if (e.key === 'ArrowDown' && mentionBox.style.display === 'block') {
     e.preventDefault(); moveActiveMention(1);
   } else if (e.key === 'ArrowUp' && mentionBox.style.display === 'block') {
@@ -306,7 +302,7 @@ textI.addEventListener('keydown', e => {
 });
 textI.addEventListener('focus', () => setTimeout(() => textI.scrollIntoView({block:'nearest'}), 50));
 
-/* ========= 履歴削除（管理トークン） ========= */
+/* ===== 履歴削除（管理トークン入力に対応） ===== */
 clearB.onclick = () => {
   if (!nameSel.value) return alert('メンバーを選択してください');
   if (!confirm('本当に全履歴を削除しますか？（取り消せません）')) return;
@@ -320,20 +316,19 @@ socket.on('cleared', () => {
   alert('チャット履歴を削除しました');
 });
 
-/* ========= メンション補完（@入力で候補を表示） ========= */
+/* ===== メンション補完（@入力で候補表示） ===== */
 let activeIdx = -1;
 
 function findMentionToken(){
-  // キャレット位置で、直前の @～ の語を見つける
+  // キャレット直前の「@xxxxx」を抽出（行頭/空白から始まる想定）
   const pos = textI.selectionStart;
   const val = textI.value;
-  // 空白・行頭から始まる @token を右端＝キャレットまで
   const left = val.slice(0, pos);
   const m = left.match(/(^|\s)@([^\s@]{0,20})$/);
   if(!m) return null;
-  const prefix = m[2]; // @に続く文字（0～）
-  const start = pos - prefix.length; // prefixの開始位置（@の直後）
-  const atPos = start - 1; // @の位置
+  const prefix = m[2];               // @ の後ろの入力途中
+  const start = pos - prefix.length; // prefix 開始位置
+  const atPos = start - 1;           // @ の位置
   return { atPos, start, end: pos, prefix };
 }
 
@@ -359,7 +354,7 @@ function applyMention(name){
   const tok = findMentionToken();
   if(!tok) return hideMentionBox();
   const val = textI.value;
-  // @prefix を @name + 後ろに半角スペースを入れて続きが打ちやすいように
+  // @prefix を @name + スペース で置換
   const before = val.slice(0, tok.atPos);
   const after  = val.slice(tok.end);
   textI.value = before + '@' + name + ' ' + after;
@@ -383,7 +378,7 @@ function applyActiveMention(){
   }
 }
 
-// 入力のたびに候補を更新
+// 入力で候補更新
 textI.addEventListener('input', () => {
   const tok = findMentionToken();
   if(!tok){
@@ -394,7 +389,7 @@ textI.addEventListener('input', () => {
   showMentionBox(cand);
 });
 
-// 入力欄からフォーカスが外れれば隠す（バー内クリックはOK）
+// 入力欄外クリックで候補を閉じる
 document.addEventListener('click', (e) => {
   if (e.target === textI || e.target === mentionBox || mentionBox.contains(e.target)) return;
   hideMentionBox();
